# dnd5e-card-generator

./: README.md  generate-test-cards.sh  pyproject.toml  requirements-dev.txt  requirements.txt  stylus.css
data/: spell_by_types.json  spells.json
dnd5e_card_generator/: cards.py  cli.py  color.py  config.py  const.py  damage.py  export.py  feat.py  format.py  imagemagick.py  inagemagick.py  magic_item.py  models.py  scraping.py  spell.py  translator.py  utils.py
dnd5e_card_generator/export/: __init__.py  ancestry_feature.py  background.py  class_feature.py  eldricht_invocation.py  feat.py  formatter.py  magic_item.py  monster.py  spell.py
dnd5e_card_generator/scraping/: __init__.py  aidedd.py  dndlounge.py  helpers.py
rpg_spell_card_generator/: cli.py
