[tool.poetry]
name = "dnd5e-card-generator"
version = "0.1.0"
description = "Scrape data from aidedd.org to generate spell and items cards with rpg-cards.vercel.app"
authors = ["Balthazar Rouberol <br@imap.cc>"]
license = "MIT"
readme = "README.md"
include = ["images/*.png"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
dnd5e-card-generator = 'dnd5e_card_generator.cli:main'
generate-background-images = 'dnd5e_card_generator.imagemagick:generate_magic_schools_symbols'
scrape-spell-types = 'dnd5e_card_generator.scraping.dndlounge:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
